# pintu-cold-storage-labelling

./: .gitignore  01_extract_frames.sh  02_convert_xml_to_labelme_json.py  03_labelme_to_yolo.py  04_labelme_to_coco.py  05_train_yolo26_pintu.py  06_train_rfdetr_nano_pintu.py  07_detect_sample_video.py  AGENTS.md  README.md  _run_utils.py  labelme_to_coco.py  labelme_to_yolo.py  main.py  pyproject.toml
