[project]
name = "pintu-cold-storage-labelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-coco-eval>=1.7.2",
    "pycocotools>=2.0.11",
    "pytorch-lightning>=2.6.1",
    "rfdetr>=1.6.5.post0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.47",
]
